--- a/notebooks/Unterricht/Woche_4/01_Unterricht.ipynb
+++ b/notebooks/Unterricht/Woche_4/01_Unterricht.ipynb
@@ -168,9 +168,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hallo John\n",
+      "Hallo Jack\n",
+      "Hallo James\n",
+      "E guete!\n"
+     ]
+    }
+   ],
    "source": [
     "for gast in \"John\", \"Jack\", \"James\":\n",
     "    print(\"Hallo\", gast)\n",
@@ -215,13 +226,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 test\n",
+      "1 test\n",
+      "2 test\n",
+      "3 test\n",
+      "4 test\n"
+     ]
+    }
+   ],
    "source": [
     "# Beispiel mit range\n",
     "for i in range(5):          # range mit einem Argument: von 0 bis 4\n",
-    "\tprint(i)                # fängt bei 0 an, endet bei 5 – 1 = 4"
+    "\tprint(i, \"test\")                # fängt bei 0 an, endet bei 5 – 1 = 4"
    ]
   },
   {
@@ -253,9 +276,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(3):\n",
     "    print(i)"
@@ -270,9 +303,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(2, 5):       # range mit zwei Argumenten: von 2 bis 4\n",
     "\tprint(i)                # fängt bei 2 an, endet bei 5 – 1 = 4"
@@ -287,9 +330,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(2, 10, 2):   # range mit drei Argumenten: 2, 4, 6, 8\n",
     "\tprint(i)                # fängt bei 2 an, macht Zweierschritte bis\n",
@@ -330,6 +384,176 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#a)\n",
+    "for i in range(5):\n",
+    "    print (i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#b)\n",
+    "for i in range(7, 10):\n",
+    "    print (i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "5\n",
+      "9\n",
+      "13\n",
+      "17\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 18, 4):\n",
+    "    print (i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "8\n",
+      "10\n",
+      "14\n",
+      "16\n",
+      "20\n",
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "#d\n",
+    "for i in range(2, 23, 2):\n",
+    "    if i % 2 == 0 and (i % 6 != 0): \n",
+    "        print (i)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "8\n",
+      "10\n",
+      "14\n",
+      "16\n",
+      "20\n",
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (2, 23):\n",
+    "    if i % 2 == 0 and (i % 6 != 0):\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "6\n",
+      "12\n",
+      "15\n",
+      "21\n",
+      "24\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (3, 33, 3):\n",
+    "    if i % 3 == 0 and (i % 9 != 0):\n",
+    "        print (i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "8\n",
+      "16\n",
+      "20\n",
+      "28\n",
+      "32\n",
+      "40\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (4, 44, 4):\n",
+    "    if i % 4 == 0 and (i % 12 != 0):\n",
+    "        print (i)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -345,6 +569,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hallo\n",
+      "hallo\n",
+      "hallo\n",
+      "hallo\n",
+      "hallo\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (5):\n",
+    "    print (\"hallo\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -357,12 +603,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t\n",
+      "e\n",
+      "s\n",
+      "t\n"
+     ]
+    }
+   ],
    "source": [
-    "for i in \"hallo\":\n",
-    "    print(i)"
+    "for k in \"test\":\n",
+    "    print(k)"
    ]
   },
   {
@@ -374,15 +631,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultat: 2\n"
+     ]
+    }
+   ],
    "source": [
     "counter = 0\n",
     "user_input = input(\"Gib einen Text ein\")\n",
     "\n",
-    "for letter in user_input:\n",
-    "    if letter in \"aeiou\":\n",
+    "for k in user_input:\n",
+    "    if k in \"aeiou\":\n",
     "        counter = counter + 1\n",
     "\n",
     "print(\"Resultat:\", counter)"
@@ -401,9 +666,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anzahl Versuche: 3\n"
+     ]
+    }
+   ],
    "source": [
     "guess_counter = 1                         # Initialisierung Akkumulator\n",
     "password = \"hallo123\"\n",
@@ -430,9 +703,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Versuchte Passwörter: \n"
+     ]
+    }
+   ],
    "source": [
     "guess = input(\"Was ist das Passwort?\")\n",
     "password = \"hallo123\"\n",
@@ -470,6 +751,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "zahl = 0\n",
+    "\n",
+    "for i in range (11):\n",
+    "    zahl = zahl + i\n",
+    "print(zahl)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -488,6 +790,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tidra\n"
+     ]
+    }
+   ],
+   "source": [
+    "text_anfang = input(\"gebe text ein\")\n",
+    "\n",
+    "text_umgekehrt = \"\"\n",
+    "for buchstabe in text_anfang:\n",
+    "    text_umgekehrt = buchstabe + text_umgekehrt\n",
+    "print(text_umgekehrt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -503,9 +834,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# Beispiel `break`\n",
     "for i in 1, 2, 3, 4, 5: # for-Schleife mit einer Sequenz als Iterationsvariable\n",
@@ -524,9 +864,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# Beispiel `continue`\n",
     "for i in 1, 2, 3, 4, 5: # for-Schleife mit einer Sequenz als Iterationsvariable\n",
@@ -585,15 +936,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "mysum = 0\n",
+    "for i in range(10):\n",
+    "    mysum = mysum + 1\n",
+    "    if mysum > 5:\n",
+    "        break\n",
+    "\n",
+    "print(mysum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "orange\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in \"apple\", \"orange\", \"pear\":\n",
+    "    if x == \"pear\":\n",
+    "        continue\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "while True:\n",
+    "    stop = input(\"do you want to stop?\")\n",
+    "    if stop == \"yes\":\n",
+    "        break"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -607,7 +1007,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.13.1"
   },
   "orig_nbformat": 4
  },
