--- a/notebooks/Unterricht/Woche_5/01_Unterricht.ipynb
+++ b/notebooks/Unterricht/Woche_5/01_Unterricht.ipynb
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,18 +269,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "minimum(2, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "minimum(5, 3)"
    ]
@@ -294,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,11 +328,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "minimum(2, 3)"
+    "minimum(4, 3)"
    ]
   },
   {
@@ -370,6 +403,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def absoulute(Zahl):\n",
+    "    if Zahl < 0:\n",
+    "        return Zahl * -1\n",
+    "    return Zahl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = absoulute(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -387,6 +461,30 @@
     "\n",
     "Probiere die Funktion mit mehreren Beispielen aus, um zu überprüfen, ob sie funktioniert.\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_sum(number):\n",
+    "\n",
+    "    summe = 0\n",
+    "    for ziffer in number:\n",
+    "        summe = int(number)\n",
+    "        summe = result + number\n",
+    "        return (summe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number = (15)"
    ]
   },
   {
@@ -477,10 +575,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def anzeige_der_ausgabe(notenwert, anzahl):\n",
+    "    print (str(notenwert) + \"er Scheine:\", anzahl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100er Scheine: 7\n",
+      "20er Scheine: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "anzeige_der_ausgabe(100, 7)\n",
+    "anzeige_der_ausgabe(20, 3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -491,10 +611,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def anzeige_der_ausgabe(notenwert, anzahl):\n",
+    "    print (str(notenwert) + \"er Scheine:\", anzahl)\n",
+    "\n",
+    "def verarbeitung_notenwert(restbetrag, notenwert):\n",
+    "    bills = restbetrag // notenwert    \n",
+    "    anzeige_der_ausgabe(notenwert, bills)\n",
+    "    return restbetrag % notenwert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WILLKOMMEN BEI DER BANK IHRES VERTRAUENS\n",
+      "*****************************************\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[96]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m'\u001b[39m\u001b[33mWILLKOMMEN BEI DER BANK IHRES VERTRAUENS\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m'\u001b[39m\u001b[33m*****************************************\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m value = \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mWie viel möchten Sie abheben?\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m'\u001b[39m\u001b[33mEingegebener Betrag: \u001b[39m\u001b[33m'\u001b[39m, value)\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mGeldausgabe:\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mValueError\u001b[39m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
+   "source": [
+    "# Komplette Lösung mit Erweiterung\n",
+    "\n",
+    "print('WILLKOMMEN BEI DER BANK IHRES VERTRAUENS')\n",
+    "print('*****************************************')\n",
+    "value = int(input('Wie viel möchten Sie abheben?'))\n",
+    "print('Eingegebener Betrag: ', value)\n",
+    "\n",
+    "print(\"Geldausgabe:\")\n",
+    "\n",
+    "# 100er Scheine\n",
+    "value = verarbeitung_notenwert(value, 100)\n",
+    "\n",
+    "# 50er Scheine\n",
+    "value = verarbeitung_notenwert(value, 50)\n",
+    "\n",
+    "# 20er Scheine\n",
+    "value = verarbeitung_notenwert(value, 20)\n",
+    "\n",
+    "# 10er Scheine\n",
+    "value = verarbeitung_notenwert(value, 10)\n",
+    "\n",
+    "# Anzeige Rest:\n",
+    "print(\"Restbetrag:\", value)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -791,6 +970,8 @@
     "\n",
     "Sind folgende Funktionsaufrufe zulässig? Was ist das Resultat?\n",
     "```python\n",
+    "\n",
+    "\n",
     "f(3)\n",
     "f()\n",
     "f(3, 2, 1)\n",
@@ -801,6 +982,33 @@
     "```\n",
     "\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (2907727815.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[87]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mf(3, b=2, 3)\u001b[39m\n               ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m positional argument follows keyword argument\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(x, a=1, b=5):\n",
+    "    return a * x + b\n",
+    "\n",
+    "#f(3)\n",
+    "#f()\n",
+    "#f(3, 2, 1)\n",
+    "f(3, b=2, 3)\n",
+    "#f(a=4, b=2)\n",
+    "#f(x=3)\n",
+    "#f(1, 2, 3)"
    ]
   },
   {
@@ -815,9 +1023,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "def eine_funktion():\n",
     "    a = 5\n",
@@ -828,9 +1044,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "print(a)  # aber nicht ausserhalb"
    ]
@@ -844,9 +1068,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "def zweite_funktion(b):\n",
     "    print(b)  # wir haben innerhalb der Funktion auf b Zugriff\n",
@@ -856,9 +1088,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'b' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[91]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mb\u001b[49m)  \u001b[38;5;66;03m# ausserhalb der Funktion existiert das Argument aber nicht\u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name 'b' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print(b)  # ausserhalb der Funktion existiert das Argument aber nicht"
    ]
@@ -872,11 +1116,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
    "source": [
-    "c = 5\n",
+    "c = 8\n",
     "\n",
     "def dritte_funktion():\n",
     "    print(c)  # man kann innerhalb einer Funktion auf eine globale Variable zugreifen\n",
@@ -893,9 +1145,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "d = 3\n",
     "\n",
@@ -910,9 +1170,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "print(d)  # ausserhalb der Funktion ist d unverändert"
    ]
@@ -938,6 +1206,8 @@
     "a = 5\n",
     "f(3)\n",
     "\n",
+    "3\n",
+    "\n",
     "```\n",
     "\n",
     "b)\n",
@@ -947,6 +1217,8 @@
     "    print(a)\n",
     "\n",
     "f()\n",
+    "\n",
+    "3\n",
     "\n",
     "```\n",
     "\n",
@@ -960,8 +1232,34 @@
     "f()\n",
     "print(a)\n",
     "\n",
+    "5\n",
+    "3\n",
     "```\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 3\n",
+    "def f():\n",
+    "    a = 5\n",
+    "    print(a)\n",
+    "\n",
+    "f()\n",
+    "print(a)"
    ]
   },
   {
