--- a/notebooks/Unterricht/Math/Math.ipynb
+++ b/notebooks/Unterricht/Math/Math.ipynb
@@ -432,6 +432,41 @@
     "len(B)\n",
     "len(AxB)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U = {0,1,2,3,4,5,6,7,8,9,10}\n",
+    "\n",
+    "A = {2,3}\n",
+    "B = {1,2,3,4}\n",
+    "\n",
+    "for x in U:\n",
+    "    print(not (x in A) or (x in B))\n",
+    "\n",
+    "B.issubset(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
